@startuml

title __TEMPLATE's Class Diagram__\n


      class Template.Action {
          + Action()
          + title()
          ~ description()
          ~ releaseYear()
          ~ review()
      }

  


      class Template.Comedy {
          + Comedy()
          + title()
          ~ description()
          ~ releaseYear()

      }



      abstract class Template.Movie {
          + addMovie()
          # header()
          {abstract} ~ description()
          {abstract} ~ releaseYear()
          {abstract} ~ review()
          {abstract} ~ title()
      }

  

  Template.Action -up-|> Template.Movie
  Template.Action o-- DVDs.DVD : dvd
  Template.Comedy -up-|> Template.Movie
  Template.Comedy o-- DVDs.DVD : dvd


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
